; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_dvb_dummy_fe.c_dvb_dummy_fe_qam_attach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_dvb_dummy_fe.c_dvb_dummy_fe_qam_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.dvb_dummy_fe_state*, i32 }
%struct.dvb_dummy_fe_state = type { %struct.dvb_frontend }

@GFP_KERNEL = common dso_local global i32 0, align 4
@dvb_dummy_fe_qam_ops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dvb_frontend* @dvb_dummy_fe_qam_attach() #0 {
  %1 = alloca %struct.dvb_frontend*, align 8
  %2 = alloca %struct.dvb_dummy_fe_state*, align 8
  store %struct.dvb_dummy_fe_state* null, %struct.dvb_dummy_fe_state** %2, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.dvb_dummy_fe_state* @kzalloc(i32 16, i32 %3)
  store %struct.dvb_dummy_fe_state* %4, %struct.dvb_dummy_fe_state** %2, align 8
  %5 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %6 = icmp eq %struct.dvb_dummy_fe_state* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  br label %19

8:                                                ; preds = %0
  %9 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %10 = getelementptr inbounds %struct.dvb_dummy_fe_state, %struct.dvb_dummy_fe_state* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %10, i32 0, i32 1
  %12 = call i32 @memcpy(i32* %11, i32* @dvb_dummy_fe_qam_ops, i32 4)
  %13 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %14 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %15 = getelementptr inbounds %struct.dvb_dummy_fe_state, %struct.dvb_dummy_fe_state* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %15, i32 0, i32 0
  store %struct.dvb_dummy_fe_state* %13, %struct.dvb_dummy_fe_state** %16, align 8
  %17 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %18 = getelementptr inbounds %struct.dvb_dummy_fe_state, %struct.dvb_dummy_fe_state* %17, i32 0, i32 0
  store %struct.dvb_frontend* %18, %struct.dvb_frontend** %1, align 8
  br label %22

19:                                               ; preds = %7
  %20 = load %struct.dvb_dummy_fe_state*, %struct.dvb_dummy_fe_state** %2, align 8
  %21 = call i32 @kfree(%struct.dvb_dummy_fe_state* %20)
  store %struct.dvb_frontend* null, %struct.dvb_frontend** %1, align 8
  br label %22

22:                                               ; preds = %19, %8
  %23 = load %struct.dvb_frontend*, %struct.dvb_frontend** %1, align 8
  ret %struct.dvb_frontend* %23
}

declare dso_local %struct.dvb_dummy_fe_state* @kzalloc(i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @kfree(%struct.dvb_dummy_fe_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
